Downgrade java version from 17 to 8